--- a/Quieres.html
+++ b/Quieres.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Nobia</title>
+    <title>Quisieras seguir siendo mi hermosisima noviecita</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <style>
         body {
@@ -31,9 +31,9 @@
     </script>
 </head>
 <body>
-    <h3>Quieres ser mi nobia?</h3>
+    <h3>Quisieras seguir siendo mi hermosisima noviecita?</h3>
     <input type="button" onclick="accionParaCuandoEllaDigaQueSi()" id="btnSi" value="Si" />
     <input type="button" id="btnNo" onmouseover="mueveElBoton()" value="No" />
-    <img src="chuec.png" width="200">
+    <img src="chile.png" width="200">
 </body>
 </html>
